# query-intent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh
configs/: training.yaml
data/processed/: data.csv  data_en.csv
data/splits/en/: test.csv  train.csv  val.csv
data/splits/uk/: test.csv  train.csv  val.csv
query_intent/: __init__.py  classifier.py
results/: crosslingual_en_model_uk_test.json  crosslingual_uk_model_en_test.json  summary.csv
src/models/: error_analysis.py  evaluate.py  plot_heatmap.py  plot_pipeline.py  plot_results.py  plot_validation.py  publish_hf.py  run_experiments.py  train.py
